Update in_date format to show only the date
Fix date format in 'in_date' to display only the date.

--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,4 @@ To Do:
 -добавить тестовые данные
 -На главной странице при выбранном Tryb Wejście исправить логику отображения данных. Выбранные паллеты ХХ (из которых уже) usunięte palety YY, (из которых ) Usunięte kartony (xx) и Inne opakowania yy
 -Неправильно показывает статистику во вкладке статистика. При выбранном артикуле берет данные из начальной даты и потом идет лишь на уменьшение. Фото в телефоне. 
+-поправить формат in_date, чтобы показывало только дату, без времени 00:00
